# CG-projects

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  build_webassembly.py  readme.md
.github/workflows/: build.yml
cmake/: configure_project.cmake  hardlink_shaders.cmake  preload_files.cmake
doc/: a tour of OpenGL.pptx  perspective.py
doc/c++ tutorial/1. new grammer/1. input and output/: main.c  main.cpp
doc/c++ tutorial/1. new grammer/2. reference/: main.c  main.cpp
doc/c++ tutorial/1. new grammer/3. dynamic memory issue/: main.c  main.cpp
doc/c++ tutorial/1. new grammer/4. operator overloading/: main.c  main.cpp
doc/c++ tutorial/2. object oriented programming/2. inherit/: main.cpp  person.cpp  person.h  student.cpp  student.h
doc/c++ tutorial/3. generic programming/1. function template/: main.c  main.cpp
media/gltf/drone/: scene.gltf
media/gltf/grey_knight/: license.txt  scene.gltf
media/shader/: brdf_lut.frag  filter_cube.vert  irradiance.frag  pbr.frag  skybox.frag
projects/base/: application.cpp  application.h  bounding_box.h  camera.cpp  camera.h  frame_rate_indicator.h  framebuffer.cpp  framebuffer.h  frustum.h  fullscreen_quad.cpp  fullscreen_quad.h  gl_utility.h  glsl_program.cpp  glsl_program.h  input.h  instanced_model.cpp  instanced_model.h  light.h  model.cpp  model.h  object3d.cpp  object3d.h  plane.h  sampler.h  skybox.cpp  skybox.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  texture_cubemap.cpp  texture_cubemap.h  transform.cpp  transform.h  uniform_buffer.h  vertex.h
projects/bonus1/: CMakeLists.txt  alpha_blend.frag  alpha_test.frag  fullscreen_quad.h  main.cpp  model.vert  oit_blend.frag  oit_final.frag  oit_init.frag  oit_peel.frag  quad.vert  transparency.cpp  transparency.h
projects/bonus2/: CMakeLists.txt  aabb.frag  aabb_instanced.vert  frustum_culling.cpp  frustum_culling.frag  frustum_culling.h  frustum_culling.vert  lambert.frag  lambert.vert  lambert_instanced.vert  main.cpp
projects/bonus3/: CMakeLists.txt  blend_bloom_map.frag  extract_bright_color.frag  gaussian_blur.frag  geometry.frag  geometry.vert  main.cpp  post_processing.cpp  post_processing.h  postprocessing.cpp  postprocessing.h  quad.frag  random.h  ssao.frag  ssaoDrawLight.vert  ssao_blur.frag  ssao_draw_light.frag  ssao_lighting.frag
projects/bonus4/: CMakeLists.txt  cube.frag  cube.vert  directional_depth.vert  directional_depth_csm.frag  directional_depth_csm.geom  directional_depth_csm.vert  lambert.frag  lambert.vert  light.frag  light.vert  main.cpp  omnidirectional_depth.frag  omnidirectional_depth.geom  omnidirectional_depth.vert  quad.frag  quad.vert  quad_csm.frag  shadow_mapping.cpp  shadow_mapping.h
projects/bonus5/: CMakeLists.txt  aabb.h  bvh.cpp  bvh.h  main.cpp  material.h  primitive.h  quad.frag  quad.vert  random.h  ray.h  raytracing.cpp  raytracing.frag  raytracing.h  sphere.h  triangle.h
projects/bonus6/: CMakeLists.txt  cull.task  full.task  instance.mesh  instance.task  main.cpp  mesh_shader_pipeline.cpp  mesh_shader_pipeline.h  mesh_shading_pipeline.cpp  meshlet.mesh  meshlet_model.cpp  meshlet_model_lod.cpp  model.cpp  model.h  shader_storage_buffer.h  triangle.mesh
projects/browser/: index.handlebars  run_webassembly.py
projects/direct_state_access/: CMakeLists.txt  direct_state_access.cpp  direct_state_access.h  main.cpp
projects/get_start/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h  main.cpp
projects/mesh_shading_pipeline/: CMakeLists.txt  bv.mesh  cull.mesh  flat_color.frag  full.mesh  lambert.frag  lod.task  main.cpp  mesh_shading_pipeline.cpp  mesh_shading_pipeline.h  meshlet2.mesh  meshlet2.task  meshlet_model.h  meshlet_model_lod.h  traditional.vert
projects/pbr_viewer/: CMakeLists.txt  animation.h  brdf_lut.frag  brdf_lut.vert  camera_controller.cpp  camera_controller.h  debug_print.h  equirectangular_to_cubemap.frag  main.cpp  material.h  model.cpp  model.h  node.h  pbr.frag  pbr.vert  pbr_viewer.cpp  pbr_viewer.h  prefilter.frag  primitive.h  quad.frag  quad.vert  render_object.h  skybox.cpp  skybox.frag  skybox.h  skybox.vert  vertex.h
projects/project1/: CMakeLists.txt  main.cpp  render_flag.cpp  render_flag.h  star.cpp  star.h
projects/project2/: CMakeLists.txt  bunny.cpp  bunny.h  main.cpp  transformation.cpp  transformation.h
projects/project3/: CMakeLists.txt  main.cpp  scene_roaming.cpp  scene_roaming.h
projects/project4/: CMakeLists.txt  instanced_rendering.cpp  instanced_rendering.h  main.cpp
projects/project5/: CMakeLists.txt  main.cpp  shading_tutorial.cpp  shading_tutorial.h
projects/project6/: CMakeLists.txt  main.cpp  texture_mapping.cpp  texture_mapping.h
projects/spirv_dynamic_compilation/: CMakeLists.txt  common.glsl  gl_program.cpp  gl_program.h  lambert.frag  lambert.vert  main.cpp  material.cpp  material.h  program_manager.cpp  program_manager.h  shader_module.cpp  shader_module.h  spirv_dynamic_compilation.cpp  spirv_dynamic_compilation.h
projects/spriv_dynamic_compilation/: CMakeLists.txt  common.glsl  gl_program.cpp  gl_program.h  lambert.frag  lambert.vert  main.cpp  material.cpp  material.h  program_manager.cpp  program_manager.h  shader_module.h  shader_resource.h  spriv_dynamic_compilation.cpp  spriv_dynamic_compilation.h
reports/: ~$4_学号_姓名.doc  实验2_学号_姓名.doc  实验3_学号_姓名.doc  实验4_学号_姓名.doc  实验5_学号_姓名.doc  额外1_学号_姓名.doc  额外3_学号_姓名.doc  额外4_学号_姓名.doc
reports/bonus1/: ~$1_学号_姓名.doc  额外1_学号_姓名.md
reports/bonus2/: ~$2_学号_姓名.doc  ~WRL0267.tmp  实验2_学号_姓名.md  额外2_学号_姓名.doc
reports/bonus3/: ~$3_学号_姓名.doc  额外3_学号_姓名.doc  额外3_学号_姓名.md
reports/bonus4/: ~$4_学号_姓名.doc  额外4_学号_姓名.doc  额外4_学号_姓名.md
reports/bonus5/: ~$5_学号_姓名.doc  额外5_学号_姓名.md
reports/project1/: 实验1_学号_姓名.doc  实验1_学号_姓名.md
reports/project2/: 实验2_学号_姓名.doc  实验2_学号_姓名.md
reports/project3/: 实验3_学号_姓名.doc  实验3_学号_姓名.md
reports/project4/: 实验4_学号_姓名.doc  实验4_学号_姓名.md
reports/project5/: 实验5_学号_姓名.doc  实验5_学号_姓名.md
reports/project6/: ~$6_学号_姓名.doc  ~WRL0001.tmp  实验6_学号_姓名.doc  实验6_学号_姓名.md
(+18 files in other folders)
